infrastructure/authentik/seaweedfs-outpost-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: seaweedfs-outpost
  namespace: authentik
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.priority: "20"

spec:
  ingressClassName: traefik
  rules:
    - host: seaweedfs.internal.nullmonkeys.com
      http:
        paths:
          - path: /outpost.goauthentik.io/
            pathType: Prefix
            backend:
              service:
                name: authentik-server
                port:
                  number: 80
